# broadband_inequality

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: box_plot_regions.ipynb  machine_learning_model.ipynb  my_notebook.ipynb  notebook_eda.ipynb
notebooks/.ipynb_checkpoints/: my_notebook-checkpoint.ipynb  notebook_eda-checkpoint.ipynb
powerbi/Input_from_BigQuery/: broadband_inequality.csv  broadband_score_by_department.csv  digital_divide.csv  rural_vs_urban_scores.csv
sql_scripts/: bb_score_by_dept.sql  boradband_inequality.sql  digital_divide_fr.sql  query_test.sql  rural_vs_urban_perf_scores.sql
visio/: data_wrangling_flow.vsdx  ~$$data_wrangling_flow.~vsdx
